--- a/index.html
+++ b/index.html
@@ -112,19 +112,43 @@
 		</ul>
 	</div>
 
-	<!--
+
 	<div class="step" data-x="2300" data-y="700" data-z="-30000">
 		<div class="slidetitle" style="margin-left:-100px"><h1>Map-Reduce (Hadoop) VS. DBMS</h1></div>
-		<div style="margin-right: 800px; margin-top: 100px">
+		<div style="margin-left: -200px; margin-top: 100px">
 			<img src="img/f0.gif" width="300" />
 		</div>
-		<div style="margin-top: -320px; margin-left: 400px;">
+		<div style="margin-top: -320px; margin-left: 700px;">
 			<img src="img/f1.gif" width="300" />
 		</div>
 	</div>
-	-->
+
+	<div id="comparison" class="step", data-x="2300" data-y="700" data-z="-30000">
+		<ul style="text-align: center; padding-top: 5%; font-size: 45px; width: 800px">
+			<li>Structured Data</li>
+			<li>Programming Language</li>
+			<li>Fault Tolerance</li>
+			<li>Performance</li>
+		</ul>
+	</div>
 
 	<div class="step" data-x="2300" data-y="1700" data-z="-30000">
+		<div class="slidetitle" style="margin-left:-100px"><h1>There Is Always a Hybrid</h1></div>
+		<div style="margin-left: -200px; margin-top: 100px">
+			<img src="img/shakehand.jpg" width="300" />
+		</div>
+		<ol style="margin-left: 25%; text-align: left; margin-top: -200px; font-size: 35px; width: 900px; list-style-type: disc;">
+			<li>HadoopDB (Azza Abouzeid et al. VLDB 2009)
+				<ol style="padding-left: 5%; text-align: left; font-size: 30px; width: 900px; list-style-type: disc;">
+					<li>multiple single-node DBMS</li>
+					<li>Hadoop job coordinator, network communication layer</li>
+				</ol>
+			</li>
+			<li style="padding-top: 5%">Hadoop++ (Jens Dittrich et al. VLDB 2010)</li>
+		</ol>
+	</div>
+
+	<div class="step" data-x="2300" data-y="2700" data-z="-30000">
 		<div class="slidetitle" ><h1 style="font-size: 80px">Drawbacks - Both Agree</h1></div>
 		<ul style="padding-left: 5%; text-align: left; padding-top: 5%; font-size: 45px; width: 900px">
 			<li>Intermediate data handling inefficiency</li>
